Front-end update

--- a/Front-End/landing page/index.html
+++ b/Front-End/landing page/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Postcrafts - Social Media for Learners</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -48,13 +48,14 @@
                     <p class="subtext">Grow your business fast with us.</p>
                     <button class="cta-btn">Join for free →</button>
                     <p class="login-text">Already joined us? <a href="#">Log in</a></p>
-                    
-                    <form id="content">
-                        <input type="text" name="input" class="input" id="search-input">
-                        <button type="reset" class="search" id="search-btn"></button>
-                    </form>
                 </div>
                 <div class="col-lg-6 text-center mt-4 mt-lg-0">
+                    <form action="" class="search-bar">
+                        <input type="search" name="search" pattern=".*\S.*" placeholder="Enter a keyword or Brand name to search" required>
+                        <button class="search-btn iconx" type="submit">
+                        <span>Search</span>
+                        </button>
+                    </form>
                     <img class="hero-img img-fluid" src="img/2.png" alt="">
                 </div>
             </div>
