--- a/Front-End/loginpage/login.html
+++ b/Front-End/loginpage/login.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login | AI Sentiment Analysis</title>
-    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="login.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
-<div class="head-container">
+<div class="container">
     <!-- Login Section -->
     <div class="login-section">
         <h2>Use AI Sentiment Analysis</h2>
         <div class="avatars">
-            <img src="img/danu.png" alt="User 1">
-            <img src="img/vanitha.jpg" alt="User 2">
-            <img src="img/kadhir.jpg" alt="User 3">
-            <img src="img/chiru.jpg" alt="User 4">
+            <img src="danu.png" alt="User 1">
+            <img src="vanitha.jpg" alt="User 2">
+            <img src="kadhir.jpg" alt="User 3">
+            <img src="chiru.jpg" alt="User 4">
         </div>
         <p>Grow your business fast!</p>
         
@@ -34,7 +34,7 @@
 
         <!-- Accurate Sentiment Detection -->
         <div class="feature">
-            <img src="img/icon1.png" alt="Sentiment Icon" class="feature-icon">
+            <img src="icon1.png" alt="Sentiment Icon" class="feature-icon">
             <div>
                 <h4>Accurate Sentiment Detection</h4>
                 <p>Our AI model detects customer sentiment with high accuracy.</p>
@@ -43,7 +43,7 @@
 
         <!-- Weekly Reports -->
         <div class="feature">
-            <img src="img/icon2.png" alt="Report Icon" class="feature-icon">
+            <img src="icon2.png" alt="Report Icon" class="feature-icon">
             <div>
                 <h4>Weekly Reports</h4>
                 <p>Get detailed reports on customer feedback trends.</p>
@@ -52,7 +52,7 @@
 
         <!-- Automated Insights -->
         <div class="feature">
-            <img src="img/icon3.png" alt="Insights Icon" class="feature-icon">
+            <img src="icon3.png" alt="Insights Icon" class="feature-icon">
             <div>
                 <h4>Automated Insights</h4>
                 <p>Save time by letting AI categorize customer responses for you.</p>
